scripts/nullness/annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8.txt
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/SET_ArrayPlace.java:28: error: [dereference.of.nullable] dereference of possibly-null reference expression
		Number value = expression.evaluate();
		               ^
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/FOR.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: from, to
	private FOR(NumericVariable variable) {
	        ^
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/FOR.java:42: error: [unboxing.of.nullable] unboxing a possibly-null reference HPBasicProgram.nextLineNumber
		int lineNumber = HPBasicProgram.nextLineNumber;
		                               ^
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/GOSUB.java:24: error: [argument] incompatible argument for parameter item of Stack.push.
		RETURN.lineNumberStack.push(HPBasicProgram.nextLineNumber);
		                                          ^
  found   : @Initialized @Nullable Integer
  required: @Initialized @NonNull Integer
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/NEXT.java:31: error: [unboxing.of.nullable] unboxing a possibly-null reference HPBasicProgram.maxValueForLoopVariable.get(varName)
		int maximalValue = HPBasicProgram.maxValueForLoopVariable.get(varName);
		                                                             ^
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/statements/REPLACE.java:32: error: [dereference.of.nullable] dereference of possibly-null reference expression
		variable.replace(from.evaluate().intValue(), to.evaluate().intValue(), expression.evaluate());
		                                                                       ^
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/HPBasicProgram.java:33: error: [unboxing.of.nullable] unboxing a possibly-null reference currentLineNumber
			Statement statement = lines.getStatementAtLineNumber(currentLineNumber);
			                                                     ^
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/NumericVariable.java:11: error: [initialization.fields.uninitialized] the constructor does not initialize fields: value
	public NumericVariable(String name) {
	       ^
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/FunctionVariable.java:17: error: [dereference.of.nullable] dereference of possibly-null reference body
		return body.evaluate();
		       ^
../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/ProgramLines.java:33: error: [return] incompatible types in return.
		return lines.higherKey(lineNumber);
		                      ^
  type of expression: @Initialized @Nullable Integer
  method return type: @Initialized @NonNull Integer
Note: ../annotator/url29d9f49ba9_frankrefischer_STTRJ_tgz-pJ8-startrekj_STTR1J8/src/startrekj/hpbasic/functions/TIM.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
10 errors
